--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,6 +1,9 @@
 flask
 flask-cors
-paddleocr==2.6.1.3
+paddlepaddle==2.5.2
+paddleocr==2.7.0.3
+opencv-python-headless==4.8.1.78
+Pillow>=8.2.0
+numpy>=1.21.0
 PyMuPDF
-Pillow
 gunicorn
