--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,6 +1,6 @@
 flask
 flask-cors
-paddlepaddle-cpu==2.5.2
+paddlepaddle==2.5.2
 paddleocr==2.7.0.3
 opencv-python-headless==4.8.1.78
 Pillow>=8.2.0
